# docs/swagger.json
@@ -1898,7 +1898,7 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "API untuk Daftar User Baru",
+                "summary": "API untuk Daftar atau Create User Baru",
                 "parameters": [
                     {
                         "description": "Daftar User Baru",
@@ -2222,31 +2222,14 @@
         },
         "dto.CreateNewUser": {
             "type": "object",
-            "required": [
-                "email",
-                "password",
-                "username"
-            ],
             "properties": {
-                "address": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "enable_login_by_link": {
-                    "type": "boolean"
-                },
                 "full_name": {
                     "type": "string"
                 },
+                "name": {
+                    "type": "string"
+                },
                 "password": {
-                    "type": "string"
-                },
-                "phone": {
-                    "type": "string"
-                },
-                "profilePict": {
                     "type": "string"
                 },
                 "roleId": {
@@ -2656,8 +2639,15 @@
         },
         "models.Role": {
             "type": "object",
+            "required": [
+                "description"
+            ],
             "properties": {
                 "created_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "description": "Main field",
                     "type": "string"
                 },
                 "id": {
@@ -2667,11 +2657,8 @@
                     "type": "boolean"
                 },
                 "name": {
+                    "description": "Main field",
                     "type": "string"
-                },
-                "object_menus": {
-                    "type": "array",
-                    "items": {}
                 },
                 "roles_menus": {
                     "type": "array",
@@ -2713,19 +2700,7 @@
         "models.User": {
             "type": "object",
             "properties": {
-                "address": {
-                    "type": "string"
-                },
                 "created_at": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "enable_login_by_link": {
-                    "type": "boolean"
-                },
-                "full_name": {
                     "type": "string"
                 },
                 "id": {
@@ -2734,17 +2709,11 @@
                 "is_active": {
                     "type": "boolean"
                 },
-                "phone": {
+                "name": {
                     "type": "string"
                 },
-                "pin": {
+                "password": {
                     "type": "string"
-                },
-                "profile_pict": {
-                    "type": "string"
-                },
-                "role": {
-                    "$ref": "#/definitions/models.Role"
                 },
                 "roleId": {
                     "type": "integer"
